Bug: 563805 Reviewer: Peter Comment: Fix alignment option of form buttons

--- a/ssf/web/docroot/css/forum.css
+++ b/ssf/web/docroot/css/forum.css
@@ -235,7 +235,6 @@ span.ss_buttonBarRight {
 div.ss_buttonBarLeft {
   margin: 0px 5px 0px 5px;
   text-align: left;
-  display: inline;
   }
 
 /* right-aligned buttons (usually at the top of the form) */
